src/test/deca/syntax/valid/synt/dot.deca
class Test {
    int x = 2;

    void affiche() {
        print(this.x);
    }
}
