src/test/deca/syntax/invalid/synt/circularInclude2.deca
#include "circularInclude.deca"

{
println("hello 2");
}
